--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.3",
     "recharts": "^2.15.3",
+    "sass": "^1.93.2",
+    "scss": "^0.2.4",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.3.0",
     "zod": "^3.24.4",
